--- a/app.html
+++ b/app.html
@@ -33,7 +33,7 @@
     <div>
       <h1>RevSight AI — VSP Choice Profit Engine</h1>
       <div class="sub">
-        Profit = <b>sum of VSP service fees</b>. MF bundles stack <b>family base “A”</b> + <b>material add-on</b> (e.g., OA+OD, KA+KD).
+        Profit = <b>sum of VSP service fees</b>. MF bundles stack <b>family base “A”</b> + <b>material add‑on</b> (e.g., OA+OD, KA+KD). Treatments (Polarized / Tinted / Transitions) are selected explicitly and never treated as materials.
       </div>
     </div>
     <div class="row" style="align-items:center">
@@ -55,15 +55,25 @@
           </label>
         </div>
         <div class="col">
-          <label>Material preference (optional)
+          <label>Material preference
             <select id="materialPref">
               <option value="">No preference</option>
               <option value="PLASTIC">Plastic</option>
               <option value="POLYCARBONATE">Polycarbonate</option>
-              <option value="HI67">Hi-Index 1.67</option>
-              <option value="HI70">Hi-Index 1.70</option>
+              <option value="HI67">Hi‑Index 1.67</option>
+              <option value="HI70">Hi‑Index 1.70</option>
               <option value="TRIVEX">Trivex</option>
               <option value="GLASS">Glass</option>
+            </select>
+          </label>
+        </div>
+        <div class="col">
+          <label>Lens treatment (exclusive)
+            <select id="treatment">
+              <option value="CLEAR">Clear</option>
+              <option value="POLARIZED">Polarized</option>
+              <option value="TINTED">Tinted</option>
+              <option value="TRANSITIONS">Transitions / Photochromic</option>
             </select>
           </label>
         </div>
@@ -87,7 +97,7 @@
     </section>
 
     <section class="col card">
-      <h3 style="margin-top:0">Line-item Economics</h3>
+      <h3 style="margin-top:0">Line‑item Economics</h3>
       <div id="lineItems"></div>
     </section>
   </main>
@@ -101,18 +111,15 @@
 
 <script>
 /* ========================= CSV + HELPERS ========================= */
-
 const CSV_URLS = [
   'https://bblaker575.github.io/Revopt-site/vsp_choice_master_v7_full_fixed.csv',
   'https://raw.githubusercontent.com/bblaker575/Revopt-site/main/vsp_choice_master_v7_full_fixed.csv'
 ];
-
 async function loadCSV(){
   const badge = document.getElementById('csvStatus');
   const tried = [];
   for(const url of CSV_URLS){
     try{
-      // blob→text works even if Pages serves “attachment”
       const resp = await fetch(url + '?t=' + Date.now(), {cache:'no-store'});
       if(!resp.ok) throw new Error(resp.status + ': ' + resp.statusText);
       const text = await (await resp.blob()).text();
@@ -125,31 +132,29 @@ async function loadCSV(){
   badge.textContent = 'CSV: not loaded';
   badge.style.borderColor = '#f66';
   const diag = document.getElementById('diag');
-  if(diag) diag.textContent = 'Tried URLs:\n- ' + tried.join('\n- ');
+  if(diag) diag.textContent = 'Tried URLs:
+- ' + tried.join('
+- ');
   return [];
 }
-
 function parseCSV(text){
-  const rows=[]; let i=0, cur=''; let inQ=false; let row=[];
-  const push=()=>{ row.push(cur); cur=''; };
-  while(i<text.length){
-    const c=text[i++];
-    if(c=='"'){ if(inQ && text[i]=='"'){ cur+='"'; i++; } else inQ=!inQ; }
+  const rows=[]; let i=0, cur=''; let inQ=false; let row=[]; const push=()=>{ row.push(cur); cur=''; };
+  while(i<text.length){ const c=text[i++]; if(c=='"'){ if(inQ && text[i]=='"'){ cur+='"'; i++; } else inQ=!inQ; }
     else if(c===',' && !inQ){ push(); }
-    else if((c==='\n'||c==='\r') && !inQ){ if(cur!==''||row.length){ push(); rows.push(row); row=[]; } }
-    else cur+=c;
-  }
+    else if((c==='
+'||c==='
+') && !inQ){ if(cur!==''||row.length){ push(); rows.push(row); row=[]; } }
+    else cur+=c; }
   if(cur!==''||row.length){ push(); rows.push(row); }
   const headers = rows.shift().map(h=>h.trim());
   return rows.filter(r=>r.length && r.some(x=>String(x).trim()!==''))
              .map(r=>{ const o={}; headers.forEach((h,idx)=>o[h]=r[idx]??''); return o; });
 }
-
 const uc = s=>String(s||'').toUpperCase();
 const num = x=>{ const n=Number(String(x).replace(/[^0-9.\-]/g,'')); return Number.isFinite(n)?n:0; };
 const truthy = x=>{ x=String(x||'').trim().toLowerCase(); return x===''||x==='1'||x==='y'||x==='yes'||x==='true'; };
 const falsy  = x=>{ x=String(x||'').trim().toLowerCase(); return x==='0'||x==='n'||x==='no'||x==='false'; };
-
+const byProfitDesc=(a,b)=>b.profit-a.profit;
 function normalizeMaterial(txt){
   const t=uc(txt);
   if(t.includes('POLY')) return 'POLYCARBONATE';
@@ -160,49 +165,55 @@ function normalizeMaterial(txt){
   if(t.includes('PLASTIC')) return 'PLASTIC';
   return t||'PLASTIC';
 }
-const byProfitDesc=(a,b)=>b.profit-a.profit;
+function detectTreatment(text){
+  const t=uc(text);
+  if(t.includes('POLAR')) return 'POLARIZED';
+  if(t.includes('TINT')) return 'TINTED';
+  if(t.includes('PHOTO')||t.includes('TRANSITIONS')||t.includes('TRANSITION')) return 'TRANSITIONS';
+  return '';
+}
 
 /* ========================= CLASSIFY ========================= */
-
 function computeProfit(row){ return num(row.vsp); }
-
 function classify(row){
   if('active' in row && falsy(row.active)) return null;
-
   const applies = uc(row.applies_to);
   let lensType = 'BOTH';
   if(applies.includes('MF') && !applies.includes('SV') && !applies.includes('ALL')) lensType='MF';
   else if(applies.includes('SV') && !applies.includes('MF') && !applies.includes('ALL')) lensType='SV';
 
-  const group = uc(row.group);
-  const code  = uc(row.code||'');
-  const exkey = uc(row.exclusive_key||'');
-  const materialTxt    = uc(row.subtype);
-  const enhancementTxt = uc(row.enhancement);
+  const group=uc(row.group||'');
+  const code=uc(row.code||'');
+  const exkey=uc(row.exclusive_key||'');
+  const materialTxt=uc(row.subtype||'');
+  const enhancementTxt=uc(row.enhancement||'');
   const desc = row.enhancement || row.subtype || row.code || '';
 
-  // SV: base from Material
-  const isBaseSV = group.includes('MATERIAL') && (exkey.includes('BASE') || exkey.includes('MATERIAL') || exkey==='');
+  const isBaseSV = group.includes('MATERIAL') && (exkey.includes('BASE')||exkey.includes('MATERIAL')||exkey==='');
 
-  // MF: Progressive families (OA, OD, NA, ND, …)
   const isProgressive = group.includes('PROGRESSIVE');
   let family='', variant='';
   if(isProgressive && code.length>=2){ family=code[0]; variant=code[1]; }
   const isBaseMF = isProgressive && variant==='A';
   const mfMaterial = isProgressive ? normalizeMaterial(enhancementTxt||materialTxt) : '';
 
+  // treatment detection (non-material)
+  const treatment = detectTreatment(desc + ' ' + enhancementTxt + ' ' + materialTxt + ' ' + group);
+
   const t=(materialTxt+' '+enhancementTxt);
   const flags={
-    AR: t.includes(' AR') || t.startsWith('AR') || t.includes('ANTI-REFLECT'),
+    AR: t.includes(' AR')||t.startsWith('AR')||t.includes('ANTI-REFLECT'),
     ASPHERIC: t.includes('ASPHERIC'),
     GLASS: t.includes('GLASS'),
-    OVERSIZE: t.includes('OVERSIZE') || t.includes('OVR') || t.includes('61MM')
+    OVERSIZE: t.includes('OVERSIZE')||t.includes('OVR')||t.includes('61MM'),
+    TREATMENT: !!treatment
   };
 
   return {
     lensType,
     material: isBaseSV ? normalizeMaterial(materialTxt) : (isProgressive ? mfMaterial : ''),
-    enhancement: (!isBaseSV && !isProgressive) ? enhancementTxt : '',
+    enhancement: (!isBaseSV && !isProgressive && !flags.TREATMENT) ? enhancementTxt : '',
+    treatment,
     desc,
     profit: computeProfit(row),
     raw: row,
@@ -211,68 +222,63 @@ function classify(row){
     family, variant
   };
 }
-
 function buildUniverse(rows){
-  const mapped = rows.map(classify).filter(Boolean);
-  return mapped.filter(it => it.baseKind ? true : (!('composable' in it.raw) || truthy(it.raw.composable)));
+  const mapped=rows.map(classify).filter(Boolean);
+  return mapped.filter(it=> it.baseKind ? true : (!('composable' in it.raw) || truthy(it.raw.composable)));
 }
-
 function applyGlobalToggles(items, toggles){
   return items.filter(it=>{
-    if(!toggles.AR && (it.enhancement.includes('AR') || it.f.AR)) return false;
-    if(!toggles.ASPHERIC && (it.material.includes('ASPHERIC') || it.f.ASPHERIC)) return false;
-    if(!toggles.GLASS && (it.material.includes('GLASS') || it.f.GLASS)) return false;
-    if(!toggles.OVERSIZE && (it.enhancement.includes('OVERSIZE') || it.f.OVERSIZE)) return false;
+    if(!toggles.AR && (it.enhancement.includes('AR')||it.f.AR)) return false;
+    if(!toggles.ASPHERIC && (it.material.includes('ASPHERIC')||it.f.ASPHERIC)) return false;
+    if(!toggles.GLASS && (it.material.includes('GLASS')||it.f.GLASS)) return false;
+    if(!toggles.OVERSIZE && (it.enhancement.includes('OVERSIZE')||it.f.OVERSIZE)) return false;
     return true;
   });
 }
 
 /* ========================= BUNDLING ========================= */
+function pickBundles(universe, lensType, materialPref, toggles, treatmentSel){
+  const pool=applyGlobalToggles(universe.filter(u=>!lensType || u.lensType===lensType || u.lensType==='BOTH'), toggles);
+  const isMF=lensType==='MF';
 
-function pickBundles(universe, lensType, materialPref, toggles){
-  const pool = applyGlobalToggles(universe.filter(u => !lensType || u.lensType===lensType || u.lensType==='BOTH'), toggles);
-  const isMF = lensType==='MF';
+  // choose one treatment based on dropdown
+  const treatmentPick = (treatmentSel && treatmentSel!=='CLEAR') ? treatmentSel : '';
+  const treatmentItem = treatmentPick ? pool.filter(x=>!x.baseKind && x.f.TREATMENT && x.treatment===treatmentPick).sort(byProfitDesc)[0] : null;
 
   if(isMF){
-    // Build MF base (A) and add-on maps by family/material
-    const basesByFamily = {};
-    const addOnByFamilyMaterial = {};
+    const basesByFamily={};
+    const addOnByFamilyMaterial={};
     for(const x of pool.filter(x=>x.baseKind==='MF')){
       if(x.variant==='A'){ basesByFamily[x.family]=x; }
       else{
-        const m = x.material || 'PLASTIC';
-        (addOnByFamilyMaterial[x.family] ||= {})[m] = x;
+        const mat=x.material||'PLASTIC';
+        (addOnByFamilyMaterial[x.family] ||= {})[mat]=x;
       }
     }
-
-    const families = Object.keys(basesByFamily);
-    const materialsSet = new Set(['PLASTIC','POLYCARBONATE','HI67','HI70','TRIVEX','GLASS']);
+    const families=Object.keys(basesByFamily);
+    const materialsSet=new Set(['PLASTIC','POLYCARBONATE','HI67','HI70','TRIVEX','GLASS']);
     for(const fam of Object.keys(addOnByFamilyMaterial)){
       for(const m of Object.keys(addOnByFamilyMaterial[fam])) materialsSet.add(m);
     }
-    const allMaterials = Array.from(materialsSet);
-    const candidateMaterials = (materialPref && allMaterials.includes(materialPref)) ? [materialPref] : allMaterials;
+    const allMaterials=Array.from(materialsSet);
+    const candidateMaterials=(materialPref && allMaterials.includes(materialPref))?[materialPref]:allMaterials;
 
-    const enhPool = pool.filter(x=>!x.baseKind);
-    const bestAR       = toggles.AR       ? enhPool.filter(e=>e.f.AR).sort(byProfitDesc)[0]       : null;
+    const enhPool=pool.filter(x=>!x.baseKind && !x.f.TREATMENT);
+    const bestAR = toggles.AR ? enhPool.filter(e=>e.f.AR).sort(byProfitDesc)[0] : null;
     const bestOversize = toggles.OVERSIZE ? enhPool.filter(e=>e.f.OVERSIZE).sort(byProfitDesc)[0] : null;
 
     const bundles=[];
     for(const fam of families){
-      const baseA = basesByFamily[fam]; if(!baseA) continue;
+      const baseA=basesByFamily[fam]; if(!baseA) continue;
       for(const mat of candidateMaterials){
         const parts=[baseA];
-        const add = (addOnByFamilyMaterial[fam]||{})[mat];
+        const add=(addOnByFamilyMaterial[fam]||{})[mat];
         if(add && add!==baseA) parts.push(add);
+        if(treatmentItem) parts.push(treatmentItem);
         if(bestAR) parts.push(bestAR);
         if(bestOversize) parts.push(bestOversize);
-
         const seen=new Set(); let profit=0; const lines=[];
-        for(const p of parts){
-          const key=(p.raw.code||'')+'|'+(p.desc||'');
-          if(seen.has(key)) continue; seen.add(key);
-          lines.push(p); profit+=p.profit;
-        }
+        for(const p of parts){ const key=(p.raw.code||'')+'|'+(p.desc||''); if(seen.has(key)) continue; seen.add(key); lines.push(p); profit+=p.profit; }
         bundles.push({ material:mat, family:fam, parts:lines, profit });
       }
     }
@@ -283,29 +289,22 @@ function pickBundles(universe, lensType, materialPref, toggles){
     return {good,mid,best,poolSize:uniq.length};
   }
 
-  // SV
-  const bases = pool.filter(x=>x.baseKind==='SV');
-  const enh   = pool.filter(x=>!x.baseKind);
-  const buckets = bases.reduce((m,x)=>{ const k=x.material||x.desc; (m[k]??=[]).push(x); return m; }, {});
-  const keys = Object.keys(buckets);
-  const candidateKeys = (materialPref && keys.includes(materialPref)) ? [materialPref] : keys;
-  const bestAR       = toggles.AR       ? enh.filter(e=>e.f.AR).sort(byProfitDesc)[0]       : null;
-  const bestOversize = toggles.OVERSIZE ? enh.filter(e=>e.f.OVERSIZE).sort(byProfitDesc)[0] : null;
-
+  // SV path
+  const bases=pool.filter(x=>x.baseKind==='SV');
+  const enhPool=pool.filter(x=>!x.baseKind && !x.f.TREATMENT);
+  const buckets=bases.reduce((m,x)=>{ const k=x.material||x.desc; (m[k]??=[]).push(x); return m; },{});
+  const keys=Object.keys(buckets);
+  const candidateKeys=(materialPref && keys.includes(materialPref))?[materialPref]:keys;
+  const bestAR = toggles.AR ? enhPool.filter(e=>e.f.AR).sort(byProfitDesc)[0] : null;
+  const bestOversize = toggles.OVERSIZE ? enhPool.filter(e=>e.f.OVERSIZE).sort(byProfitDesc)[0] : null;
   const bundles=[];
   for(const k of (candidateKeys.length?candidateKeys:keys)){
-    const base=(buckets[k]||[]).sort(byProfitDesc)[0];
-    if(!base) continue;
-    const parts=[base];
+    const base=(buckets[k]||[]).sort(byProfitDesc)[0]; if(!base) continue; const parts=[base];
+    if(treatmentItem) parts.push(treatmentItem);
     if(bestAR) parts.push(bestAR);
     if(bestOversize) parts.push(bestOversize);
-
     const seen=new Set(); let profit=0; const lines=[];
-    for(const p of parts){
-      const key=(p.raw.group||'')+'|'+(p.material||'')+'|'+(p.enhancement||'')+'|'+(p.desc||'');
-      if(seen.has(key)) continue; seen.add(key);
-      lines.push(p); profit+=p.profit;
-    }
+    for(const p of parts){ const key=(p.raw.group||'')+'|'+(p.material||'')+'|'+(p.enhancement||'')+'|'+(p.desc||''); if(seen.has(key)) continue; seen.add(key); lines.push(p); profit+=p.profit; }
     bundles.push({ material:k, parts:lines, profit });
   }
   bundles.sort(byProfitDesc);
@@ -316,13 +315,9 @@ function pickBundles(universe, lensType, materialPref, toggles){
 }
 
 /* ========================= RENDER ========================= */
-
 function renderBundles(picks){
   const el=document.getElementById('bundles');
-  if(!picks || !picks.best){
-    el.innerHTML = '<div class="muted">No bundles available with current filters.</div>';
-    return;
-  }
+  if(!picks || !picks.best){ el.innerHTML='<div class="muted">No bundles available with current filters.</div>'; return; }
   const make=(b,cls,label)=>{
     if(!b) return `<div class="bundle ${cls}"><div class="muted">No ${label} bundle</div></div>`;
     const rows=b.parts.map(p=>`<tr><td>${p.raw.code?('<b>'+p.raw.code+'</b> – '):''}${p.desc || (p.material||p.enhancement)}</td><td class="right">$${Number(p.profit).toFixed(2)}</td></tr>`).join('');
@@ -337,41 +332,36 @@ function renderBundles(picks){
   };
   el.innerHTML = make(picks.good,'good','Good') + make(picks.mid,'mid','Mid') + make(picks.best,'best','Best');
 }
-
 function renderLineItems(universe, lensType){
   const el=document.getElementById('lineItems');
   const list=universe.filter(u=>!lensType || u.lensType===lensType || u.lensType==='BOTH').sort(byProfitDesc).slice(0,200);
   if(!list.length){ el.innerHTML='<div class="muted">No items.</div>'; return; }
   el.innerHTML=`<table>
     <thead><tr><th>Type</th><th>Family</th><th>Material</th><th>Enhancement</th><th>Code</th><th>Description</th><th class="right">VSP fee (profit)</th></tr></thead>
-    <tbody>${list.map(r=>`<tr><td>${r.lensType||'—'}</td><td>${r.family||'—'}</td><td>${r.material||'—'}</td><td>${r.enhancement||'—'}</td><td>${r.raw.code||'—'}</td><td>${r.desc||''}</td><td class="right">$${Number(r.profit).toFixed(2)}</td></tr>`).join('')}</tbody>
+    <tbody>${list.map(r=>`<tr><td>${r.lensType||'—'}</td><td>${r.family||'—'}</td><td>${r.material||'—'}</td><td>${r.enhancement|| (r.treatment?('TREAT:'+r.treatment):'—')}</td><td>${r.raw.code||'—'}</td><td>${r.desc||''}</td><td class="right">$${Number(r.profit).toFixed(2)}</td></tr>`).join('')}</tbody>
   </table>`;
 }
 
 /* ========================= INIT ========================= */
-
 let UNIVERSE=[];
 async function recalc(){
   const lensType=document.getElementById('lensType').value;
   const materialPref=document.getElementById('materialPref').value;
+  const treatmentSel=document.getElementById('treatment').value;
   const toggles={
     OVERSIZE:document.getElementById('toggleOversize').checked,
     AR:document.getElementById('toggleAR').checked,
     ASPHERIC:document.getElementById('toggleAspheric').checked,
     GLASS:document.getElementById('toggleGlass').checked,
   };
-  const picks=pickBundles(UNIVERSE, lensType, materialPref, toggles);
+  const picks=pickBundles(UNIVERSE, lensType, materialPref, toggles, treatmentSel);
   renderBundles(picks); renderLineItems(UNIVERSE, lensType);
-  document.getElementById('diag').textContent = JSON.stringify(
-    {lensType, materialPref, toggles, universe:UNIVERSE.length, poolCandidates:picks.poolSize}, null, 2
-  );
+  document.getElementById('diag').textContent = JSON.stringify({lensType, materialPref, treatment:treatmentSel, toggles, universe:UNIVERSE.length, poolCandidates:picks.poolSize}, null, 2);
 }
-
 (async function init(){
   const raw = await loadCSV();
   UNIVERSE = buildUniverse(raw);
-  document.getElementById('forceRefresh').addEventListener('click', recalc);
-  ['lensType','materialPref','toggleOversize','toggleAR','toggleAspheric','toggleGlass']
+  ['forceRefresh','lensType','materialPref','treatment','toggleOversize','toggleAR','toggleAspheric','toggleGlass']
     .forEach(id=>document.getElementById(id).addEventListener('change', recalc));
   recalc();
 })();
